Fix button spinner not aligning

--- a/src/components/FileUpload/FileUpload.module.scss
+++ b/src/components/FileUpload/FileUpload.module.scss
@@ -19,6 +19,10 @@
   width: 100%;
 }
 
+.ButtonSpinner {
+  float: left;
+}
+
 .SubmitButton {
   float: left;
 }
